navbar expanding spacing proboem fixed

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -76,7 +76,7 @@
 
 .navbar-profile {
   position: relative;
-  display: flex;
+  // display: flex;
   align-items: center;
   width: 40px;
   height: 40px;
@@ -84,6 +84,13 @@
   transition: 0.3s;
   margin-right: 25px;
   overflow: hidden;
+  outline: 3px solid #F300A1;
+}
+
+.navbar-profile.active {
+  position: relative;
+  width: 800px;
+  background: #160d1c;
   outline: 3px solid #F300A1;
 }
 
@@ -100,31 +107,26 @@
   overflow: hidden;
 }
 
-.navbar-profile.active {
-  width: 1000px;
-  background: #160d1c;
-  outline: 3px solid #F300A1;
+.navbar-profile .profile-items ul {
+  padding-left: 0;
+  width: max-content;
 }
-
-// .navbar-profile .profile-items ul {
-//   position: absolute;
-//   left: 100px;
-// }
 
 .navbar-profile .profile-items ul li {
   // position: absolute;
   list-style: none;
   display: inline-block;
-  padding: 0px 40px;
+  padding: 0px 40px 0px 0px;
   // top: 0;
   // width: 100%;
   // height: 100%;
 }
-.navbar-profile .profile-items a:first-child {
-  padding: 0 0;
+.navbar-profile .profile-items li:first-child {
+  padding-left: 40px;
 }
 
 .navbar-profile .profile-items a {
+
   color: #F300A1;
   font-weight: bolder;
   font-size: 1.2rem;
@@ -147,7 +149,7 @@
   box-shadow: 0 0 10px #F300A1, 0 0 20px #F300A1,0 0 40px #F300A1;
 }
 
-@media screen and (max-width: 860px) {
+@media screen and (max-width: 1288px) {
   .navbar-fixed {
     display: block;
     left: 1%;
